force-app/main/default/objects/BRM_IT_Form__c/BRM_IT_Form__c.object-meta.xml
<CustomObject>
    <label>BRM IT Form</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BRM IT Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>