force-app/main/default/objects/BRM_IT_Form__c/fields/Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_End_Date__c</fullName>
    <formula>Change_Request__r.BMCServiceDesk__Actual_End_Date__c</formula>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>