force-app/main/default/objects/BRM_IT_Form__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <formula>Change_Request__r.BMCServiceDesk__Actual_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>