force-app/main/default/objects/BRM_IT_Form__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <inlineHelpText>Description of next action to be taken with due date</inlineHelpText>
    <label>Next Key Action</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>