force-app/main/default/objects/BRM_IT_Form__c/fields/Alternatives_Considered__c.field-meta.xml
<CustomField>
    <fullName>Alternatives_Considered__c</fullName>
    <label>Alternatives Considered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>