force-app/main/default/objects/BRM_IT_Form__c/fields/Annual_Baseline_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Annual_Baseline_Time_Hours__c</fullName>
    <description>Captures hours spent on task currently per year.

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Hours spent on task currently per year</inlineHelpText>
    <label>Annual Baseline Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>