force-app/main/default/objects/BRM_IT_Form__c/fields/Annual_Cost_Avoidance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Cost_Avoidance__c</fullName>
    <inlineHelpText>Anticipated cost avoidance per year</inlineHelpText>
    <label>Annual Cost Avoidance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>