force-app/main/default/objects/BRM_IT_Form__c/fields/Annual_IT_Savings__c.field-meta.xml
<CustomField>
    <fullName>Annual_IT_Savings__c</fullName>
    <inlineHelpText>Anticipated IT savings per year</inlineHelpText>
    <label>Annual IT Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>