force-app/main/default/objects/BRM_IT_Form__c/fields/Annual_Revenue_Gain__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Gain__c</fullName>
    <description>Anticipated revenue gain per year

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Anticipated revenue gain per year</inlineHelpText>
    <label>Annual Revenue Gain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>