force-app/main/default/objects/BRM_IT_Form__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application(s)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>