force-app/main/default/objects/BRM_IT_Form__c/fields/Approved_Requestor__c.field-meta.xml
<CustomField>
    <fullName>Approved_Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business sponsor at ELT or ELT-1 level</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>