force-app/main/default/objects/BRM_IT_Form__c/fields/BRM_IT_Form_Number__c.field-meta.xml
<CustomField>
    <fullName>BRM_IT_Form_Number__c</fullName>
    <description>BRM IT Form number.

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <displayFormat>IT-REQ-{0000}</displayFormat>
    <label>Form ID</label>
    <type>AutoNumber</type>
</CustomField>