force-app/main/default/objects/BRM_IT_Form__c/fields/BRM_IT_Request__c.field-meta.xml
<CustomField>
    <fullName>BRM_IT_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BRM IT Request</label>
    <referenceTo>BRM_IT_Request__c</referenceTo>
    <relationshipLabel>BRM IT Forms</relationshipLabel>
    <relationshipName>BRM_IT_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>