force-app/main/default/objects/BRM_IT_Form__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <description>Description of the IT solution to the stated problem

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Description of the IT solution to the stated problem</inlineHelpText>
    <label>Solution Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>