force-app/main/default/objects/BRM_IT_Form__c/fields/Business_Risk_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk_Likelihood__c</fullName>
    <inlineHelpText>Provide the likelihood of the potential risk assessment</inlineHelpText>
    <label>Business Risk Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High &gt;75% chance</fullName>
            </value>
            <value>
                <fullName>Moderate &gt;50% chance</fullName>
            </value>
            <value>
                <fullName>Low &gt;25% chance</fullName>
            </value>
            <value>
                <fullName>Extremely Low &lt;25% chance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>