force-app/main/default/objects/BRM_IT_Form__c/fields/Business_Risk_Severity__c.field-meta.xml
<CustomField>
    <fullName>Business_Risk_Severity__c</fullName>
    <description>Provide potential risk assesment

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Provide potential risk assesment</inlineHelpText>
    <label>Business Risk Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Impacts license to operate</fullName>
            </value>
            <value>
                <fullName>Impacts current year operating plan</fullName>
            </value>
            <value>
                <fullName>Impacts future growth potential</fullName>
            </value>
            <value>
                <fullName>No impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>