force-app/main/default/objects/BRM_IT_Form__c/fields/Business_Value_Category__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Category__c</fullName>
    <label>Magnitude of Business Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Run - Keeps the lights on</fullName>
            </value>
            <value>
                <fullName>Grow - Makes money</fullName>
            </value>
            <value>
                <fullName>Transform - It is revolutionary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>