force-app/main/default/objects/BRM_IT_Form__c/fields/Business_Value_Category_Decision_Tree__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Category_Decision_Tree__c</fullName>
    <formula>IMAGE(&apos;/resource/Business_Value_Category&apos;,&apos;hh&apos;, 24, 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Value Category Decision Tree</label>
    <type>Text</type>
</CustomField>