force-app/main/default/objects/BRM_IT_Form__c/fields/Change_Category__c.field-meta.xml
<CustomField>
    <fullName>Change_Category__c</fullName>
    <formula>TEXT(Change_Request__r.BMCServiceDesk__Change_Category__c)</formula>
    <label>Change Category</label>
    <type>Text</type>
</CustomField>