force-app/main/default/objects/BRM_IT_Form__c/fields/Change_Owner__c.field-meta.xml
<CustomField>
    <fullName>Change_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business person responsible for providing benefits and scope clarity

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>Business person responsible for providing benefits and scope clarity</inlineHelpText>
    <label>Business Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>