force-app/main/default/objects/BRM_IT_Form__c/fields/Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Change_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field searches Change Request #.</description>
    <label>Change Request</label>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>BRM IT Forms</relationshipLabel>
    <relationshipName>BRM_IT_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>