force-app/main/default/objects/BRM_IT_Form__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>If a Remedy ticket is associated to this request, this will be set to the ticket Closed Date

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <inlineHelpText>If a Remedy ticket is associated to this request, this will be set to the ticket Closed Date</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>