force-app/main/default/objects/BRM_IT_Form__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <label>Complete %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>