force-app/main/default/objects/BRM_IT_Form__c/fields/Confidential_Project__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System administrators, including Tower Leads, can see all requests including Confidential requests.</inlineHelpText>
    <label>Confidential Project</label>
    <type>Checkbox</type>
</CustomField>