force-app/main/default/objects/BRM_IT_Form__c/fields/Cost_Estimate_Details__c.field-meta.xml
<CustomField>
    <fullName>Cost_Estimate_Details__c</fullName>
    <label>Cost Estimate Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>