force-app/main/default/objects/BRM_IT_Form__c/fields/CR_Status__c.field-meta.xml
<CustomField>
    <fullName>CR_Status__c</fullName>
    <formula>Change_Request__r.BMCServiceDesk__FKStatus__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CR Status</label>
    <type>Text</type>
</CustomField>