force-app/main/default/objects/BRM_IT_Form__c/fields/CR_To_Be_Created__c.field-meta.xml
<CustomField>
    <fullName>CR_To_Be_Created__c</fullName>
    <inlineHelpText>Please choose &quot;Yes&quot; if you wish to create a Change Request. Choose &quot;No&quot; if you wish to skip this automation.</inlineHelpText>
    <label>CR To Be Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>