force-app/main/default/objects/BRM_IT_Form__c/fields/Create_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Create_Service_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this option if you want to have a Service Request automatically created when saving this record.</inlineHelpText>
    <label>Create Service Request</label>
    <type>Checkbox</type>
</CustomField>