force-app/main/default/objects/BRM_IT_Form__c/fields/Describe_Risk__c.field-meta.xml
<CustomField>
    <fullName>Describe_Risk__c</fullName>
    <label>Describe Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>