force-app/main/default/objects/BRM_IT_Form__c/fields/EAB_Scoping_Results__c.field-meta.xml
<CustomField>
    <fullName>EAB_Scoping_Results__c</fullName>
    <label>EAB Scoping Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>