force-app/main/default/objects/BRM_IT_Form__c/fields/ELT_Area__c.field-meta.xml
<CustomField>
    <fullName>ELT_Area__c</fullName>
    <description>Captures ELT area of the request.

-- Created as part of CR00032940 | IT-REQ-1779</description>
    <label>ELT Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Corp Development &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>PSS</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>