force-app/main/default/objects/BRM_IT_Form__c/fields/Estimated_Annual_Benefit_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Benefit_Calculation__c</fullName>
    <inlineHelpText>Describe the calculation or justification for the Estimated Annual Benefit value provided</inlineHelpText>
    <label>Est Annual Benefit/Value Calculation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>