force-app/main/default/objects/BRM_IT_Form__c/fields/Execution_Track__c.field-meta.xml
<CustomField>
    <fullName>Execution_Track__c</fullName>
    <inlineHelpText>Generally an enhancement is anything that requires less than 200 hours of IT effort</inlineHelpText>
    <label>Execution Track</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>