force-app/main/default/objects/BRM_IT_Form__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Captures ELT sub-area of the request.

-- Modified as part of CR00032940 | IT-REQ-1779</description>
    <label>ELT Sub-Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ELT_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Environmental, Health &amp; Safety (EHS)</fullName>
                <label>Environmental Health &amp; Safety</label>
            </value>
            <value>
                <fullName>Finance</fullName>
                <label>All</label>
            </value>
            <value>
                <fullName>Global Supply Chain Operations</fullName>
                <label>Supply Chain/Logistics</label>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Quality Assurance(QA)</fullName>
                <label>QA Systems &amp; Compliance</label>
            </value>
            <value>
                <fullName>Research &amp; Development (R&amp;D)</fullName>
                <label>R&amp;D</label>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Controllership</fullName>
            </value>
            <value>
                <fullName>Commercial Operations</fullName>
            </value>
            <value>
                <fullName>M &amp; A</fullName>
            </value>
            <value>
                <fullName>Manufacturing Large Cap</fullName>
            </value>
            <value>
                <fullName>Manufacturing Small Cap</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Sustaining Engineering &amp; CI</fullName>
            </value>
            <value>
                <fullName>Design Assurance</fullName>
            </value>
            <value>
                <fullName>QA Large Cap</fullName>
            </value>
            <value>
                <fullName>QA Small Cap</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
                <isActive>false</isActive>
                <label>Customer Care</label>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>Human Resources</fullName>
                <isActive>false</isActive>
                <label>Human Resources</label>
            </value>
            <value>
                <fullName>Legal</fullName>
                <isActive>false</isActive>
                <label>Legal</label>
            </value>
            <value>
                <fullName>Quality Assurance / Regulatory Affairs (QA/RA)</fullName>
                <isActive>false</isActive>
                <label>Quality Assurance / Regulatory Affairs (QA/RA)</label>
            </value>
            <value>
                <fullName>Regulatory Affairs(RA)</fullName>
                <isActive>false</isActive>
                <label>Regulatory Affairs(RA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>