force-app/main/default/objects/BRM_IT_Form__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <defaultValue>&quot;Idea&quot;</defaultValue>
    <label>Gate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idea</fullName>
                <default>true</default>
                <label>Idea</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Execute</fullName>
            </value>
            <value>
                <fullName>Value Realization</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>Value Prioritization</fullName>
                <label>Prioritization</label>
            </value>
            <value>
                <fullName>Business as Usual</fullName>
                <isActive>false</isActive>
                <label>Business as Usual</label>
            </value>
            <value>
                <fullName>Execute (Build/Test/Implement/Change Mgmt)</fullName>
                <isActive>false</isActive>
                <label>Execute (Build/Test/Implement/Change Mgmt)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>