force-app/main/default/objects/BRM_IT_Form__c/fields/Governance__c.field-meta.xml
<CustomField>
    <fullName>Governance__c</fullName>
    <label>Governance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business risk (end user training impact) impacting large business area across multiple locations</fullName>
            </value>
            <value>
                <fullName>New (products or platforms)</fullName>
            </value>
            <value>
                <fullName>Does not fit within current architecture standards</fullName>
            </value>
            <value>
                <fullName>Upgrades greater than dot level (2.0 to 3.0)</fullName>
            </value>
            <value>
                <fullName>Sourcing – licensing/contract changes/extensions</fullName>
            </value>
            <value>
                <fullName>Security changes (new or changing)</fullName>
            </value>
            <value>
                <fullName>Impacts integrations with multiple systems</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>