force-app/main/default/objects/BRM_IT_Form__c/fields/Hand_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Hand_Off_Date__c</fullName>
    <inlineHelpText>If a Remedy ticket is associated to this request, this will be set to the date the ticket was created.</inlineHelpText>
    <label>Hand-Off Date</label>
    <type>Date</type>
</CustomField>