force-app/main/default/objects/BRM_IT_Form__c/fields/HRC_IT_Lead__c.field-meta.xml
<CustomField>
    <fullName>HRC_IT_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the individual responsible for the next action</inlineHelpText>
    <label>Key Action Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRM_IT_Forms2</relationshipName>
    <type>Lookup</type>
</CustomField>