force-app/main/default/objects/BRM_IT_Form__c/fields/Infrastructure_Impact__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Impact__c</fullName>
    <label>Infrastructure Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New application/system</fullName>
            </value>
            <value>
                <fullName>New module of existing application/system</fullName>
            </value>
            <value>
                <fullName>Change to existing module of application/system</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>