force-app/main/default/objects/BRM_IT_Form__c/fields/IT_Budget_Available__c.field-meta.xml
<CustomField>
    <fullName>IT_Budget_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Budget Available</label>
    <type>Checkbox</type>
</CustomField>